--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     },
     "dependencies": {
         "bootstrap": "^4.5.0",
-        "node-sass": "^4.14.1"
+        "node-sass": "^4.14.1",
+        "styled-components": "^5.1.1",
+        "yargs-parser": "^18.1.3"
     }
 }
