--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "dependencies": {
         "bootstrap": "^4.5.0",
         "node-sass": "^4.14.1",
+        "npm": "^6.14.5",
         "styled-components": "^5.1.1",
+        "yargs": "^15.3.1",
         "yargs-parser": "^18.1.3"
     }
 }
